Customizer bug squashing

--- a/style.css
+++ b/style.css
@@ -1176,7 +1176,6 @@ body.page-template-template-mosaic #content-container {
 }
 #mosaic .entry-header > h1.entry-title {
     font-size: 1.8em;
-    font-weight: 500;
     line-height: 1em;
     margin-bottom: 0px;
 }
